--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,3 @@
----
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
----
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,12 +6,13 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>daniel pallares</title>
   </head>
   <body class="bg-background text-foreground">
     <slot />
   </body>
 </html>
+
 <style is:global>
   @font-face {
     font-family: "SF Pro Display";
