--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,9 @@ import { FadeIn } from "@/components/fade-in";
     </a>
   </nav>
   <main class="max-w-screen-sm px-4 pt-8 mx-auto">
-    <div class="flex items-center justify-between">
+    <div
+      class="flex sm:flex-row flex-col gap-y-4 sm:items-center justify-between"
+    >
       <div class="flex items-center gap-x-6">
         <Image
           src={ProfilePic}
