--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,3 +1,7 @@
+---
+const ogUrl = new URL("/og.svg", Astro.url);
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,6 +9,7 @@
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta property="og:image" content={ogUrl} />
     <meta name="generator" content={Astro.generator} />
     <title>daniel pallares</title>
   </head>
