--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -12,6 +12,10 @@ const ogUrl = new URL("/og.png", Astro.url);
     <meta property="og:image" content={ogUrl} />
     <meta name="generator" content={Astro.generator} />
     <title>daniel pallares</title>
+    <script
+      defer
+      data-domain="dani.pw"
+      src="https://plausible.dani.pw/js/script.js"></script>
   </head>
   <body class="bg-background text-foreground">
     <slot />
