--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -25,14 +25,6 @@ const ogUrl = new URL("/og.png", Astro.url);
 <style is:global>
   @font-face {
     font-family: "SF Pro Display";
-    src: url("/fonts/SF-Pro-Display-Light.otf") format("opentype");
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: "SF Pro Display";
     src: url("/fonts/SF-Pro-Display-Regular.otf") format("opentype");
     font-weight: 400;
     font-style: normal;
@@ -56,9 +48,16 @@ const ogUrl = new URL("/og.png", Astro.url);
   }
 
   @font-face {
-    font-family: "SF Pro Display";
-    src: url("/fonts/SF-Pro-Display-Bold.otf") format("opentype");
-    font-weight: 700;
+    font-family: "SF Mono";
+    src: url("/fonts/SF-Mono-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  @font-face {
+    font-family: "SF Mono";
+    src: url("/fonts/SF-Mono-Light.otf") format("opentype");
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
   }
