fade change, colors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { FadeIn } from "@/components/fade-in";
     <Star client:load className="h-6 fill-foreground" />
     <a
       href="/"
-      class="underline decoration-dashed underline-offset-2 decoration-foreground decoration-1"
+      class="underline decoration-dashed underline-offset-2 decoration-muted decoration-1"
     >
       home
     </a>
@@ -38,8 +38,6 @@ import { FadeIn } from "@/components/fade-in";
         <div>
           <FadeIn client:load>
             <h1 class="text-3xl font-semibold font-sans">daniel pallares</h1>
-          </FadeIn>
-          <FadeIn client:load delay={0.2}>
             <p class="text-muted">fullstack web developer</p>
           </FadeIn>
         </div>
