--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,9 @@ import { FadeIn } from "@/components/fade-in";
       <div class="flex items-center gap-x-6">
         <Image
           src={ProfilePic}
-          alt="Profile"
-          class="size-20 grayscale rounded-xl"
+          draggable="false"
+          alt="me"
+          class="size-20 grayscale rounded-xl select-none"
           loading="eager"
         />
         <div>
