--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import { ContactButton } from "@/components/contact-button";
 import { FadeIn } from "@/components/fade-in";
 import { ImageGallery } from "@/components/image-preview";
 import { Tool } from "@/components/tool";
+import { ModeToggle } from "@/components/mode-toggle";
 ---
 
 <Layout>
@@ -278,5 +279,6 @@ import { Tool } from "@/components/tool";
         >
       </a>
     </div>
+    <ModeToggle client:load />
   </footer>
 </Layout>
