--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ import { ModeToggle } from "@/components/mode-toggle";
       </div>
       <div class="flex items-center">
         <BriefcaseIcon className="size-5 mr-2" />
-        brandcloud.pro
+        web developer – brandcloud.pro
       </div>
     </div>
 
@@ -129,14 +129,16 @@ import { ModeToggle } from "@/components/mode-toggle";
     </div>
 
     <h2 class="text-2xl pt-6 pb-4 font-medium">projects</h2>
-    <ul class="space-y-12">
+    <ul class="space-y-12 print:space-y-4">
       <li class="break-inside-avoid">
         <h3 class="text-lg">
           <a
             class="flex items-center gap-x-1"
             href="https://brandcloud.pro/"
             target="_blank"
-            >BrandCloud.pro <span class="text-muted text-sm">↗</span>
+            >BrandCloud.pro <span class="text-muted print:hidden text-sm"
+              >↗</span
+            >
           </a>
         </h3>
         <p class="text-muted text-sm">
@@ -187,7 +189,7 @@ import { ModeToggle } from "@/components/mode-toggle";
             href="https://csas-devops.vercel.app/"
             target="_blank"
             >Česká spořitelna DevOps hackathon portal
-            <span class="text-muted text-sm">↗</span>
+            <span class="text-muted print:hidden text-sm">↗</span>
           </a>
         </h3>
         <p class="text-muted text-sm">
@@ -222,7 +224,7 @@ import { ModeToggle } from "@/components/mode-toggle";
             href="https://rezervace.kampapark.com/"
             target="_blank"
             >Restaurant reservation system
-            <span class="text-muted text-sm">↗</span>
+            <span class="text-muted print:hidden text-sm">↗</span>
           </a>
         </h3>
         <p class="text-muted text-sm">
