fade-in blur, description

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -31,12 +31,12 @@ const ogUrl = new URL("/og.png", Astro.url);
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta property="og:image" content={ogUrl} />
     <meta name="generator" content={Astro.generator} />
     <title>daniel pallares</title>
+    <meta name="description" content="web developer" />
     <!-- <script
       defer
       data-domain="dani.pw"
