--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,6 +58,8 @@ import { ModeToggle } from "@/components/mode-toggle";
         <div>
           <FadeIn client:load>
             <h1 class="text-3xl font-semibold">Daniel Pallares</h1>
+          </FadeIn>
+          <FadeIn delay={0.2} client:load>
             <p class="text-muted">fullstack web developer</p>
           </FadeIn>
         </div>
@@ -82,48 +84,48 @@ import { ModeToggle } from "@/components/mode-toggle";
     <h2 class="text-2xl pt-6 pb-4 font-medium">tools</h2>
     <div class="flex flex-wrap gap-1">
       <Tool>
-        <img class="dark:hidden" src="/tools/react-light.svg" />
-        <img class="hidden dark:block" src="/tools/react-dark.svg" />
+        <img class="dark:hidden" src="/tools/react-light.svg" alt="" />
+        <img class="hidden dark:block" src="/tools/react-dark.svg" alt="" />
         React
       </Tool>
       <Tool>
-        <img src="/tools/typescript.svg" />
+        <img src="/tools/typescript.svg" alt="" />
         TypeScript
       </Tool>
       <Tool>
-        <img src="/tools/tailwind.svg" />
+        <img src="/tools/tailwind.svg" alt="" />
         Tailwind CSS
       </Tool>
       <Tool>
-        <img src="/tools/nextjs.svg" />
+        <img src="/tools/nextjs.svg" alt="" />
         Next.js
       </Tool>
       <Tool>
-        <img src="/tools/tanstack.svg" />
+        <img src="/tools/tanstack.svg" alt="" />
         TanStack
       </Tool>
       <Tool>
-        <img class="dark:hidden" src="/tools/astro-light.svg" />
-        <img class="hidden dark:block" src="/tools/astro-dark.svg" />
+        <img class="dark:hidden" src="/tools/astro-light.svg" alt="" />
+        <img class="hidden dark:block" src="/tools/astro-dark.svg" alt="" />
         Astro
       </Tool>
       <Tool>
-        <img class="dark:hidden" src="/tools/payload-light.svg" />
-        <img class="hidden dark:block" src="/tools/payload-dark.svg" />
+        <img class="dark:hidden" src="/tools/payload-light.svg" alt="" />
+        <img class="hidden dark:block" src="/tools/payload-dark.svg" alt="" />
         Payload CMS
       </Tool>
       <Tool>
-        <img class="dark:hidden" src="/tools/motion-light.svg" />
-        <img class="hidden dark:block" src="/tools/motion-dark.svg" />
+        <img class="dark:hidden" src="/tools/motion-light.svg" alt="" />
+        <img class="hidden dark:block" src="/tools/motion-dark.svg" alt="" />
         Motion
       </Tool>
       <Tool>
-        <img class="dark:hidden" src="/tools/drizzle-light.svg" />
-        <img class="hidden dark:block" src="/tools/drizzle-dark.svg" />
+        <img class="dark:hidden" src="/tools/drizzle-light.svg" alt="" />
+        <img class="hidden dark:block" src="/tools/drizzle-dark.svg" alt="" />
         Drizzle ORM
       </Tool>
       <Tool>
-        <img src="/tools/figma.svg" />
+        <img src="/tools/figma.svg" alt="" />
         Figma
       </Tool>
     </div>
